Removed Auto_open VR Tools

--- a/PodRacing_Project/PodRacing_Project.uproject
+++ b/PodRacing_Project/PodRacing_Project.uproject
@@ -13,8 +13,23 @@
 			"Enabled": true
 		},
 		{
-			"Name": "FMODStudio",
-			"Enabled": true
+			"Name": "SteamVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Linux",
+				"Mac"
+			]
+		},
+		{
+			"Name": "OculusVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Android"
+			]
 		}
 	]
 }
